# finishvideo

./: .gitignore  README.md  finishvideo.py  pyproject.toml
legacy/: finishvideo.sh
scripts/: make_smoke_fixtures.sh
src/finishvideo/: __init__.py  audio.py  cli.py  formatting.py  plan.py  probe.py  render.py  timeline.py
tests/: test_cli.py
